# datapipeline

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml  requirements.txt
scripts/: create_tables.sql  load_data.sh
scripts/source/: create_tables.sql  load_data.sh
src/: active_clients.py  client_transactions.py  data_io.py  load_data.py  main.py  most_sold_products.py  normalize.py  pipeline.py  preload.py  purchased_products_by_client.py  revenue_by_client.py  spark_service.py  spark_session.py  transform_data.py
tests/: fixtures.py  test_data_transformation.py
